corretions num 3 -> open api update
